@@ -1,4 +1,5 @@
 DIST asciidoc-9.0.0_rc1.tar.gz 576694 BLAKE2B 4d255606675346d00ab03398bf48cb30d357f9f9366944e4faf66ae4c96dafce49acdd930fc848f3dbb2d704a004bb5815d17b53416a76c8368a92e4716328b2 SHA512 801f360b0c444e932f1c50897d446de0ec3f0fb2206080b5aa6dda396fede96065f7bb629a84c8a8e40c5d8897f305fdb1877512f04ae757f3b142fd3a7305d0
+EBUILD asciidoc-9.0.0_rc1-r1.ebuild 2535 BLAKE2B e4706d17195283c937b1948f1d2f15fe6ee29468f6c4cf494073b65a7e80bc2e77b932a70c0928085dfe6f07b30e5a3a7a37a55698564167289b521b91c537f0 SHA512 ff482a34d3c6d4bfe12573101ecf954457cc197f0a340ed7391e745378a9db455684972cf24edcb15106f6002cd7afd4d997de2e7872c56a727cca2266902d26
 EBUILD asciidoc-9.0.0_rc1.ebuild 2536 BLAKE2B 74995715a6ec84cf1f4df83128d12867feabf012a740c15ed47e19b63c742832126862dd314e2c1ce589f25df9b19e719683f752dc2cea1492d98a7bde2c0894 SHA512 b9cf748ba5c1d7359c03640e10c49bb397b5bd1281d7574666f923dd3e5997ebfaee7feda0aba3d1d95e7b23a877b1c611863c0199f37950c320691d52312de7
-MISC ChangeLog 81 BLAKE2B 5e008a79395bbd5b12f4aebc7f68ef8b3477d929d6f26e9461926ca358dc5a69aa2cd52631c340bc4fc377e1b2cdad0008577022963039e01158242fec7a3905 SHA512 ef2e45d5ecb34103de7cc8f7ffe4058e77e58d9614e022e2bb560e58fb86a91e8cfbabf9124601e75741c7ba8fc5ba53d5557e011b45b697f896bc5344101c66
+MISC ChangeLog 145 BLAKE2B d02152098b2070715ac4382452e64f6db8f064daec0dc711f0a3e7b29f1f0fcdbb5deab99fc06db7149a1854a2faa6a9da107ac91b7cd3736fb3e6eddc59bb27 SHA512 149033b40a3d3e55bda565125978e088e597636b86832fcb5f6c035ba43a0a705424b72694d87802cbc0c3674a30d921f8b2d4be590d58e106c6f08165f2f5a6
 MISC metadata.xml 514 BLAKE2B 89fefee3e8081fc45a8251255bf365f58eba6aa9eef92a23bd8f234703b7062b1dd2a415260fcda1b799cffa4b46d0da22b153ba8de6b77cb6076666ff43ccb7 SHA512 2587ac6d8c24ceca295eef2dc6e0735461dd09864d6a1f282d67fc3c58cd18aa565099a2c280edec143024295b74a251152918932c37d3be450aef68d367ca70
